@@ -30,6 +30,8 @@ function templateReplace(&$TITLE,&$MENUBAR,&$ACTIONBARMODULE,&$ACTIONBARPAGE,&$B
 	global $urlRequestRoot;
 	global $TEMPLATEBROWSERPATH;
 	global $TEMPLATECODEPATH;
+	global $SITEDESCRIPTION;
+	global $SITEKEYWORDS;
 	$TEMPLATEBROWSERPATH = "$urlRequestRoot/$cmsFolder/$templateFolder/".TEMPLATE;
 	$TEMPLATECODEPATH = "$sourceFolder/$templateFolder/".TEMPLATE;
 	include ($TEMPLATECODEPATH."/index.php");
