@@ -54,7 +54,7 @@ generate_text_log()
  else
  {
   print "Revision " revno " : " $1 " by " username " on " date
-  print "--------------------------------------------------------------"
+  print "----------------------------------------------------------------------------------------------"
  } 
  }
  END{
